# emulot

./: Cargo.toml  README.md
.github/workflows/: book.yml  ci.yml
doc/: book.toml
doc/src/: README.md  SUMMARY.md  cli.md  configuration.md  tips.md
doc/src/api/: README.md  guests.md
doc/src/cli/: README.md  create.md  daemon.md  remove.md  run.md  start.md  stop.md
examples/configs/: fedora-osx-aarch64.yaml
src/: args.rs  crypto.rs  curl.rs  de.rs  error.rs  file.rs  guest.rs  main.rs  orchestrator.rs  schema.sql  terminal.rs
src/client/: config.rs  mod.rs
src/config/: boot.rs  device.rs  drive.rs  filesystem.rs  machine.rs  mod.rs  network.rs  smp.rs
src/daemon/: guest.rs  mod.rs  unix.rs
src/qmp/: mod.rs  receive.rs  send.rs
src/storage/: mod.rs
tests/: integration_test.rs
tests/data/: api.toml  daemon.yml  test-config.json  test.toml
