[package]
name = "emulot"
version = "2.0.3"
description = "A configuration management solution for QEMU"
edition = "2021"
authors = ["Jeff Caffrey-Hill <jeff@caffreyhill.com>"]
license = "MIT"
repository = "https://github.com/ReverentEngineer/emulot"
readme = "README.md"
keywords = ["emulation", "management", "QEMU"]

[dependencies]
axum = { version = "0.6.10", features = ["macros", "http2"] }
chashmap = "2.2.2"
clap = { version = "4.1.8", features = ["derive"] }
curl = "0.4.44"
hyper = { version = "0.14.25", features = ["server"] }
pin-project-lite = "0.2.9"
rusqlite = "0.28.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["rt", "macros", "process", "io-util"] }
toml = "0.7.3"
url = "2.3.1"
