[package]
name = "emulot"
version = "2.1.1"
description = "A configuration management solution for QEMU"
edition = "2021"
authors = ["Jeff Caffrey-Hill <jeff@caffreyhill.com>"]
license = "MIT"
repository = "https://github.com/ReverentEngineer/emulot"
readme = "README.md"
keywords = ["emulation", "management", "QEMU"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
rusqlite = "0.28.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
system-harness = { version = "0"  }
toml = "0.7.3"

[dev-dependencies]
serde_test = "1.0.159"
